infra/kubernetes/ingress-setup.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true" # hmmmmm
    kubernetes.io/ingress.class: "public"
    kubernetes.io/tls-acme: "true"
    nginx.org/ssl-services: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/server-snippet: "proxy_ssl_verify off;"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  namespace: default
spec:
  tls:
  - secretName: stacksmithstudio-secret
    hosts:
      - www.stacksmithstudio.com
      - stacksmithstudio.com
      - github.stacksmithstudio.com
  rules:
  - host: www.stacksmithstudio.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8000
  - host: stacksmithstudio.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8000
  - host: github.stacksmithstudio.com
    http:
      paths:
      - path: /
        backend:
          serviceName: provider
          servicePort: 8001
